force-app/main/default/objects/BatchHistory__c/BatchHistory__c.object-meta.xml
<CustomObject>
    <description>Objet utilitaire contenant les informations d&apos;exécution des batchs</description>
    <label>Historique des batchs</label>
    <nameField>
        <displayFormat>HISBA/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiques des batchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>