force-app/main/default/objects/BatchHistory__c/fields/dateFinExecute__c.field-meta.xml
<CustomField>
    <fullName>dateFinExecute__c</fullName>
    <label>Date/heure de fin execute</label>
    <type>DateTime</type>
</CustomField>