force-app/main/default/objects/BatchHistory__c/fields/dateFinStart__c.field-meta.xml
<CustomField>
    <fullName>dateFinStart__c</fullName>
    <label>Date/heure de fin du start</label>
    <type>DateTime</type>
</CustomField>