force-app/main/default/objects/BatchHistory__c/fields/dateLancementExecute__c.field-meta.xml
<CustomField>
    <fullName>dateLancementExecute__c</fullName>
    <label>Date/heure de lancement execute</label>
    <type>DateTime</type>
</CustomField>