force-app/main/default/objects/BatchHistory__c/fields/dateLancementStart__c.field-meta.xml
<CustomField>
    <fullName>dateLancementStart__c</fullName>
    <label>Date/heure de lancement du start</label>
    <type>DateTime</type>
</CustomField>