force-app/main/default/objects/BatchHistory__c/fields/erreurTraitee__c.field-meta.xml
<CustomField>
    <fullName>erreurTraitee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Erreur traitée</label>
    <type>Checkbox</type>
</CustomField>