force-app/main/default/objects/BatchHistory__c/fields/GDPR_dateExpiration__c.field-meta.xml
<CustomField>
    <fullName>GDPR_dateExpiration__c</fullName>
    <defaultValue>NOW()+ 61</defaultValue>
    <label>Date expiration (GDPR)</label>
    <type>DateTime</type>
</CustomField>