force-app/main/default/objects/BatchHistory__c/fields/IdEnregistrementsErreur__c.field-meta.xml
<CustomField>
    <fullName>IdEnregistrementsErreur__c</fullName>
    <label>Id enregistrements en erreur</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>