force-app/main/default/objects/BatchHistory__c/fields/nombreATraiter__c.field-meta.xml
<CustomField>
    <fullName>nombreATraiter__c</fullName>
    <label>Nombre d’enregistrement à traiter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>