force-app/main/default/objects/BatchHistory__c/fields/nombreTraite__c.field-meta.xml
<CustomField>
    <fullName>nombreTraite__c</fullName>
    <label>Nombre d’enregistrement traités</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>