force-app/main/default/objects/BatchHistory__c/fields/nomDuBatch__c.field-meta.xml
<CustomField>
    <fullName>nomDuBatch__c</fullName>
    <label>Nom du batch</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>