force-app/main/default/objects/BatchHistory__c/fields/statut__c.field-meta.xml
<CustomField>
    <fullName>statut__c</fullName>
    <label>Statut</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Démarré</fullName>
            </value>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
            <value>
                <fullName>Erreur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>