force-app/main/default/objects/BatchHistory__c/fields/traceErreurs__c.field-meta.xml
<CustomField>
    <fullName>traceErreurs__c</fullName>
    <label>Trace des erreurs rencontrées</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>