force-app/main/default/objects/BatchHistory__c/listViews/Batch_Exploitation.listView-meta.xml
<ListView>
    <fullName>Batch_Exploitation</fullName>
    <columns>NAME</columns>
    <columns>nomDuBatch__c</columns>
    <columns>dateLancementStart__c</columns>
    <columns>dateFinStart__c</columns>
    <columns>dateLancementExecute__c</columns>
    <columns>dateFinExecute__c</columns>
    <columns>statut__c</columns>
    <columns>nombreATraiter__c</columns>
    <columns>nombreTraite__c</columns>
    <columns>traceErreurs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nomDuBatch__c</field>
        <operation>contains</operation>
        <value>BA_EXP</value>
    </filters>
    <label>Batch Exploitation</label>
    <language>fr</language>
</ListView>