force-app/main/default/objects/BatchHistory__c/listViews/QA_UpdateOrderStatusGC.listView-meta.xml
<ListView>
    <fullName>QA_UpdateOrderStatusGC</fullName>
    <columns>NAME</columns>
    <columns>dateLancementExecute__c</columns>
    <columns>dateFinExecute__c</columns>
    <columns>statut__c</columns>
    <columns>nombreATraiter__c</columns>
    <columns>nombreTraite__c</columns>
    <columns>IdEnregistrementsErreur__c</columns>
    <columns>erreurTraitee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nomDuBatch__c</field>
        <operation>equals</operation>
        <value>QA_UpdateOrderStatusGC</value>
    </filters>
    <label>QA_UpdateOrderStatusGC</label>
    <language>fr</language>
</ListView>