force-app/main/default/objects/BatchHistory__c/listViews/QA_UpdateOrderStatusGC_Erreur_TODAY.listView-meta.xml
<ListView>
    <fullName>QA_UpdateOrderStatusGC_Erreur_TODAY</fullName>
    <columns>NAME</columns>
    <columns>dateLancementExecute__c</columns>
    <columns>dateFinExecute__c</columns>
    <columns>statut__c</columns>
    <columns>nombreATraiter__c</columns>
    <columns>nombreTraite__c</columns>
    <columns>IdEnregistrementsErreur__c</columns>
    <columns>erreurTraitee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nomDuBatch__c</field>
        <operation>equals</operation>
        <value>QA_UpdateOrderStatusGC</value>
    </filters>
    <filters>
        <field>statut__c</field>
        <operation>equals</operation>
        <value>Erreur</value>
    </filters>
    <filters>
        <field>OBJECT_ID</field>
        <operation>equals</operation>
        <value>801680000024QGO</value>
    </filters>
    <label>QA_UpdateOrderStatusGC - Erreur - TODAY</label>
</ListView>