force-app/main/default/objects/BatchHistory__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>nomDuBatch__c</columns>
    <columns>dateLancementStart__c</columns>
    <columns>dateFinStart__c</columns>
    <columns>dateLancementExecute__c</columns>
    <columns>dateFinExecute__c</columns>
    <columns>statut__c</columns>
    <columns>nombreATraiter__c</columns>
    <columns>nombreTraite__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>